--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -544,7 +544,7 @@ section,
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  min-height: 35vh;
+  min-height: 100vh;
   position: relative;
   padding: 80px 0;
   display: flex;
@@ -822,6 +822,7 @@ padding:0;
   .portfolio .portfolio-filters li {
     font-size: 14px;
     margin: 0 5px;
+    min-height: 30vh
   }
 }
 
