--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -544,7 +544,7 @@ section,
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  min-height: 100vh;
+  min-height: 85vh;
   position: relative;
   padding: 80px 0;
   display: flex;
@@ -822,7 +822,12 @@ padding:0;
   .portfolio .portfolio-filters li {
     font-size: 14px;
     margin: 0 5px;
-    min-height: 30vh
+    
+  }
+}
+@media (max-width: 320px) {
+  .hero{
+    min-height: 30vh;
   }
 }
 
