--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,6 +212,11 @@ h6 {
     margin-left: 300px;
   }
 }
+@media (max-width: 320px) {
+  .hero{
+    min-height: 30vh;
+  }
+}
 
 @media (max-width: 1199px) {
   .header {
