--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,11 +212,6 @@ h6 {
     margin-left: 300px;
   }
 }
-@media (max-width: 320px) {
-  .hero{
-    min-height: 30vh;
-  }
-}
 
 @media (max-width: 1199px) {
   .header {
@@ -549,12 +544,18 @@ section,
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  min-height: 90vh;
+  min-height: 85vh;
+  padding: top 1000px;
   position: relative;
-  padding: 80px 0;
+  padding: 10px 0;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@media (max-width: 380px) {
+  .hero {
+    min-height: 30vh;
+  }
 }
 
 .hero img {
