--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -544,12 +544,17 @@ section,
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  min-height: 80vh;
+  min-height: 100vh;
   position: relative;
   padding: 80px 0;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@media (max-width: 500px) {
+  .hero  {
+    min-height: 30vh;
+  }
 }
 
 .hero img {
